<resources>
    <string name="app_name">MyCalculator</string>
    <string name="button_reset">C</string>
    <string name="button_delete">del</string>
    <string name="button_change_sign">+-</string>
    <string name="button_point">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_result">=</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="light_theme">LightTheme</string>
    <string name="dark_theme">DarkTheme</string>
    <string name="mono_theme">MonoTheme</string>
    <string name="back_button">Back</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="main_theme">Main Theme</string>
</resources>