<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/number_screen_marginTop"
        android:gravity="center_horizontal"
        android:text="@string/choose_theme"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/RadioButtons"/>

    <RadioGroup
        android:id="@+id/RadioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/number_screen_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:id="@+id/radioButtonLightTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/radioButtonDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/radioButtonMonoTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mono_theme" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/number_screen_marginTop"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/RadioButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/back_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>